WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28745
minor style correction and include fix for notifications
https://bugs.webkit.org/show_bug.cgi?id=28745
Summary
minor style correction and include fix for notifications
John Gregg
Reported
2009-08-26 11:40:58 PDT
I was alerted to an incorrect styling of enum members in notifications, and finding a problem with throwError not being defined (unclear how or when that was broken).
Attachments
patch for style & include
(3.01 KB, patch)
2009-08-26 11:43 PDT
,
John Gregg
no flags
Details
Formatted Diff
Diff
patch with more files
(4.47 KB, patch)
2009-08-26 11:50 PDT
,
John Gregg
no flags
Details
Formatted Diff
Diff
same patch, no tabs in ChangeLog
(4.47 KB, patch)
2009-08-26 12:34 PDT
,
John Gregg
levin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
John Gregg
Comment 1
2009-08-26 11:43:33 PDT
Created
attachment 38626
[details]
patch for style & include
John Gregg
Comment 2
2009-08-26 11:50:08 PDT
Created
attachment 38627
[details]
patch with more files here's a patch with all the files!
John Gregg
Comment 3
2009-08-26 12:34:32 PDT
Created
attachment 38632
[details]
same patch, no tabs in ChangeLog tab to spaces in ChangeLog.
David Levin
Comment 4
2009-08-26 12:37:07 PDT
Comment on
attachment 38632
[details]
same patch, no tabs in ChangeLog
> Index: WebCore/ChangeLog > +2009-08-26 John Gregg <
johnnyg@google.com
> > + > + Reviewed by NOBODY (OOPS!). > + > + minor style correction and include fix for notifications > +
https://bugs.webkit.org/show_bug.cgi?id=28745
> + > + No new tests.
Typically you would explain why there are no new tests. For example, "No new functionality so no new tests."
David Levin
Comment 5
2009-08-26 13:14:35 PDT
Assigned to levin for landing.
David Levin
Comment 6
2009-08-26 13:48:57 PDT
Committed as
http://trac.webkit.org/changeset/47793
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug