WebCore: minor style correction and include fix for notifications https://bugs.webkit.org/show_bug.cgi?id=28745

Patch by John Gregg <johnnyg@google.com> on 2009-08-26
Reviewed by David Levin.

No change in behavior, so no tests.

* bindings/js/JSDesktopNotificationsCustom.cpp: add include of Error.h
* notifications/Notification.cpp: change enum style to InterCaps
(WebCore::Notification::Notification):
* notifications/NotificationPresenter.h:
(WebCore::NotificationPresenter::):

WebKitTools: Minor style correction and include fix for notifications
https://bugs.webkit.org/show_bug.cgi?id=28745

Patch by John Gregg <johnnyg@google.com> on 2009-08-26
Reviewed by David Levin.

* DumpRenderTree/win/DRTDesktopNotificationPresenter.cpp:
  change to correct EnumStyle
(DRTDesktopNotificationPresenter::checkNotificationPermission):

Canonical link: https://commits.webkit.org/39369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47793 268f45cc-cd09-0410-ab3c-d52691b4dbfc