WebKitTools/DumpRenderTree/win/DRTDesktopNotificationPresenter.cpp
@@ -127,9 +127,9 @@ HRESULT STDMETHODCALLTYPE DRTDesktopNotificationPresenter::checkNotificationPerm
     bool allowed = ::gLayoutTestController->checkDesktopNotificationPermission(jsOrigin);
 
     if (allowed)
-        *result = WebCore::NotificationPresenter::PERMISSION_ALLOWED;
+        *result = WebCore::NotificationPresenter::PermissionAllowed;
     else
-        *result = WebCore::NotificationPresenter::PERMISSION_DENIED;
+        *result = WebCore::NotificationPresenter::PermissionDenied;
 
     JSStringRelease(jsOrigin);
 #endif
